--- a/designPattern/pom.xml
+++ b/designPattern/pom.xml
@@ -18,10 +18,9 @@
     </properties>
 
     <dependencies>
-        <!--web-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter</artifactId>
             <version>2.3.2.RELEASE</version>
         </dependency>
     </dependencies>
