--- a/designPattern/pom.xml
+++ b/designPattern/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>spring-boot-starter</artifactId>
             <version>2.3.2.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.18</version>
+        </dependency>
     </dependencies>
 
 </project>
