--- a/datastructure/pom.xml
+++ b/datastructure/pom.xml
@@ -19,8 +19,11 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>java</groupId>
+            <artifactId>exam</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
-
 
 </project>
