--- a/datastructure/pom.xml
+++ b/datastructure/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>exam</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.1.1-jre</version>
+        </dependency>
     </dependencies>
 
 </project>
