对象头查看

--- a/jvm/pom.xml
+++ b/jvm/pom.xml
@@ -19,8 +19,11 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.9</version>
+        </dependency>
     </dependencies>
-
 
 </project>
