--- a/code/pom.xml
+++ b/code/pom.xml
@@ -9,9 +9,9 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>exam</artifactId>
+    <artifactId>code</artifactId>
     <version>1.0</version>
-    <name>exam</name>
+    <name>code</name>
 
 
     <properties>
